# youtube

./: .replit  docker-compose.yml  pnpm-lock.yaml  pyproject.toml  replit.md
.agents/memory/: MEMORY.md  youtube-factory-pipeline.md
artifacts/api-server/src/routes/: analytics.ts  assets.ts  chapters.ts  index.ts  jobs.ts  logs.ts  pipelines.ts  production-assets.ts  projects.ts  render.ts  research.ts  scripts.ts  (+6 more)
artifacts/youtube-factory/: index.html  package.json
artifacts/youtube-factory/.replit-artifact/: artifact.toml
artifacts/youtube-factory/src/: App.tsx  index.css
attached_assets/: Pasted-Analyze-the-entire-repository-before-making-any-changes_1783925829784.txt  Pasted-Analyze-the-entire-repository-before-making-any-changes_1783964583706.txt  Pasted-Analyze-the-entire-repository-before-making-any-changes_1783967343133.txt  Pasted-Analyze-the-entire-repository-before-making-any-changes_1783968959424.txt  Pasted-Analyze-the-entire-repository-before-making-any-changes_1784003710604.txt  Pasted-Analyze-the-entire-repository-before-making-any-changes_1784031684699.txt
lib/api-spec/: openapi.yaml  orval.config.ts
services/youtube-factory-api/: .env.example  Dockerfile  requirements.txt
services/youtube-factory-api/app/: main.py
services/youtube-factory-api/scripts/: postprocess_cli.py  render_cli.py
services/youtube-factory-api/tests/: conftest.py  test_asset_service.py  test_chapter_service.py  test_research_service.py  test_script_service.py  test_storyboard_service.py  test_subtitle_service.py  test_thumbnail_service.py  test_timeline_service.py
(+218 files in other folders)
