[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anyio==4.7.0",
    "asyncpg==0.30.0",
    "celery[redis]==5.5.2",
    "fastapi==0.115.12",
    "faster-whisper>=1.2.1",
    "httpx==0.28.1",
    "imageio-ffmpeg>=0.6.0",
    "moviepy==2.1.2",
    "numpy>=2.5.1",
    "pillow>=9.2.0,<11.0",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "pytest==8.3.5",
    "pytest-asyncio==0.24.0",
    "redis==5.2.1",
    "sqlalchemy[asyncio]==2.0.41",
    "structlog==25.2.0",
    "trio>=0.33.0",
]
